# Architext

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PHASE_1_COMPLETE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  test-task-store.json  test_api_manual.py  test_results.txt
.github/: copilot-instructions.md  pull_request_template.md
docs/: DEVELOPER_REFERENCE.md  DEVELOPMENT.md  DOCS.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  OPERATIONAL_TEST_REPORT.md  PHASE_3_COMPLETE.md  PROJECT_ASSESSMENT.md  PROJECT_RETROSPECTIVE.md  PROJECT_STATUS.md  REFACTOR_PLAN.md  RELEASE_NOTES.md  SELF_REFLECTION_REPORT.md  TASK_REFACTORING_PLAN.md  TEMP_IMPROVEMENT_EXECUTION_PLAN.md  advanced-config.json.example
docs/research/: README.md  (+22 more)
scripts/: benchmark.py  evaluate_phase25.py  incremental_index_prototype.py  reindex_with_metadata.py  release_gate_findings_dashboard.py  run_ux_release_gate.py  test_connection.py  ux_simulation_kpi_summary.py  validate_release_gate_log.py
src/: api_utils.py  cli.py  cli_utils.py  config.py  file_filters.py  indexer.py  ingestor.py  server.py  server_utils.py  task_registry.py  tasks.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli_integration.py  test_cli_utils.py  test_config.py  test_docs_api_contract.py  test_history.py  test_incremental_indexing.py  test_indexer.py  test_ingestor.py  test_integration.py  test_integration_tasks_indexer.py  test_metrics.py  test_parallel_execution.py  test_phase29_remediation.py  test_pipeline.py  test_recommendations.py  test_release_gate_decision.py  test_release_gate_reporting_tools.py  test_scheduler.py  test_scoring_weights.py  test_server.py  test_task_modules.py  test_tasks_v2.py  test_tasks_v2_extended.py  test_webhooks.py
(+66 files in other folders)
