[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architext"
version = "1.0.0"
description = "An Intelligent Codebase Architect Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Architext Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "llama-index-core",
    "llama-index-llms-openai",
    "llama-index-llms-openai-like",
    "llama-index-embeddings-huggingface",
    "llama-index-embeddings-openai",
    "llama-index-vector-stores-chroma",
    "chromadb",
    "openai>=1.0.0",
    "python-dotenv",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "GitPython>=3.1.0",
    "fastapi",
    "uvicorn",
    "httpx",
    "sentence-transformers",
    "tree-sitter",
    "tree-sitter-languages",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
    "black",
    "isort",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/IMAGINARY9/Architext"
Repository = "https://github.com/IMAGINARY9/Architext"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = "models_cache|storage|storage-tests|storage-requests"
